--- a/mauiblazor/RecipeFriends/wwwroot/index.html
+++ b/mauiblazor/RecipeFriends/wwwroot/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="RecipeFriends.styles.css" rel="stylesheet" />
+
+    <!-- PSC Blazor MarkdownEditor -->
+    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
 </head>
 
 <body>
@@ -21,6 +26,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="lib/query/jquery.js"></script>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
