--- a/mauiblazor/RecipeFriends/wwwroot/index.html
+++ b/mauiblazor/RecipeFriends/wwwroot/index.html
@@ -1,35 +1,40 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>RecipeFriends</title>
-    <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="RecipeFriends.styles.css" rel="stylesheet" />
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+        <title>RecipeFriends</title>
+        <base href="/" />
+        <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
+        <link href="css/app.css" rel="stylesheet" />
+        <link href="RecipeFriends.styles.css" rel="stylesheet" />
 
-    <!-- PSC Blazor MarkdownEditor -->
-    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
-    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
-    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
-</head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+        <link href="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.css" rel="stylesheet" />
 
-<body>
+        <!-- PSC Blazor MarkdownEditor -->
+        <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
+        <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
+        <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
+    </head>
 
-    <div class="status-bar-safe-area"></div>
+    <body>
 
-    <div id="app">Loading...</div>
+        <div class="status-bar-safe-area"></div>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="lib/query/jquery.js"></script>
+        <div id="app">Loading...</div>
 
-    <script src="_framework/blazor.webview.js" autostart="false"></script>
+        <div id="blazor-error-ui">
+            An unhandled error has occurred.
+            <a href="" class="reload">Reload</a>
+            <a class="dismiss">🗙</a>
+        </div>
+        <!-- <script src="lib/query/jquery.js"></script> -->
 
-</body>
+        <script src="_framework/blazor.webview.js" autostart="false"></script>
+        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+        <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
+    </body>
 
 </html>
