--- a/mauiblazor/RecipeFriends/wwwroot/index.html
+++ b/mauiblazor/RecipeFriends/wwwroot/index.html
@@ -5,12 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
         <title>RecipeFriends</title>
         <base href="/" />
-        <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
+        <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
         <link href="css/app.css" rel="stylesheet" />
 
-
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+         <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
         <link href="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.css" rel="stylesheet" />
 
         <!-- PSC Blazor MarkdownEditor -->
